Edited static pages texts to sound more unified

--- a/client/src/app/main/about/about.component.html
+++ b/client/src/app/main/about/about.component.html
@@ -4,33 +4,44 @@
 
 <div class="grid-container">
    <div class="grid-item">
-      <h1 class="h1-title">Hello, nice to meet you! </h1>
-      <h3 class="h3-title">My name is Jenny Guteva and I am the person behind The Book Corner App!</h3>
+      <h1 class="h1-title">Greetings, it's a pleasure to meet you!</h1>
+      <h3 class="h3-title">I'm Jenny Guteva, the creator of The Book Corner App!</h3>
       <img src="../../../assets/img/JennyGuteva.jpg" alt="Jenny, author of the App" class="responsive-image">
    </div>
    <div class="grid-item">
-      <p class="p-text">First things first, thank you for visiting the App and the About page. As The Book Corner is a
-         student project, I would assume you are either one of my fellow students or one of our instructors. In both
-         cases, hello and welcome!
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <p class="p-text">Firstly, I'd like to express my gratitude for your interest in The Book Corner. 
+         As this is a student project, I imagine you might be a fellow student or an instructor. 
+         In either case, a warm welcome to you!
       </p>
-      <p class="p-text">If you are not a person from my classes, but a curious fella (or lady) hello to you too and I
-         am happy The Book Corner caught your eye!
-         Please be aware that this is an Angular App developed by me for my Angular course exam. I will not make
-         excuses, but just know it is beginner level and I do understand there is more to be required, but hey, Netflix,
-         Google, Microsoft, Nintendo (and Rome) were not build in a month (day) singlehandedly.
+      <p class="p-text">If you're an enthusiastic explorer who has stumbled upon The Book Corner, 
+         I'm delighted that it has piqued your curiosity! Please note, this Angular App is a product of my 
+         academic journey in the Angular course. While it's at a beginner level, I acknowledge there's room for growth. 
+         After all, even Netflix, Google, Microsoft, Nintendo (and Rome) weren't built in a day.
       </p>
-      <p class="p-text">That said, this App is not for commercial use and it is not intended to be deployed. It is meant
-         only to be used as project work for my exam. If you are the one examining me, I hope the experience was good enough.</p>
-      <p class="p-text">The idea for The Book Corner comes from my love of books, reading and traveling the world(s)
-         fueled by my imagination without even going outside. I would personally enjoy such an App and using it. If
-         you'd like to share something with me, reach out via one of the social links posted here. Who knows, this could become a passion project for me and a real App someday!
+      <p class="p-text">This App is purely academic and not intended for commercial use. It serves as a testament to my 
+         learning journey. If you're here to evaluate my work, I hope your experience has been positive.</p>
+      <p class="p-text">The concept of The Book Corner stems from my passion for books, reading, and the joy of exploring 
+         different worlds through the power of imagination, all from the comfort of home. I would personally relish using such 
+         an App. If you'd like to share your thoughts with me, feel free to reach out via the social links provided. Who knows, 
+         this could evolve into a passion project and, depending on my free time and other commitments, become a real App someday!
       </p><p class="p-text"><strong>Thanks! <mat-icon>spa</mat-icon></strong></p>
    </div>
    <div class="grid-item">
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
       <img src="../../../assets/img/contacts.jpg" alt="contacts image" class="responsive-image">
-      <p class="p-text">If you wish to get in touch with me, please use one of the following:</p>
-      <p class="p-text"><strong><mat-icon> email</mat-icon> Email:</strong><a href="mailto:jenny.guteva@gmail.com"> jenny.guteva@gmail.com</a></p>
-      <p class="p-text"><strong><mat-icon> chat</mat-icon> LinkedIn:</strong><a href="https://www.linkedin.com/in/jenny-guteva-0978bba5/" target="_blank"> https://www.linkedin.com/in/jenny-guteva-0978bba5/</a></p>
-      <p class="p-text"><strong><mat-icon>code</mat-icon> GitHub:</strong><a href="https://github.com/Jenaldin" target="_blank"> https://github.com/Jenaldin</a></p>
+      <p class="p-text">Should you wish to connect with me, please feel free to use the following:</p>
+      <p class="p-text"><mat-icon>email</mat-icon><strong> Email:</strong><a href="mailto:jenny.guteva@gmail.com"> jenny.guteva@gmail.com</a></p>
+      <p class="p-text"><mat-icon>chat</mat-icon><strong> LinkedIn:</strong><a href="https://www.linkedin.com/in/jenny-guteva-0978bba5/" target="_blank"> https://www.linkedin.com/in/jenny-guteva-0978bba5/</a></p>
+      <p class="p-text"><mat-icon>code</mat-icon><strong> GitHub:</strong><a href="https://github.com/Jenaldin" target="_blank"> https://github.com/Jenaldin</a></p>
+      <p class="p-text"><mat-icon>person_add</mat-icon><strong> Social media handel: </strong>Jenaldin</p>
    </div>
 </div>
