--- a/client/src/app/main/home/home.component.html
+++ b/client/src/app/main/home/home.component.html
@@ -1,116 +1,166 @@
 <div class="center-div" *ngIf="isLoading">
-   <mat-spinner></mat-spinner>
+  <mat-spinner></mat-spinner>
 </div>
 
 <div class="grid-container">
-   <div class="grid-item">
-      <br>
-      <h1 class="h1-title">Welcome, book lover!</h1>
-      <br>
-      <br>
-      <h3 class="h3-title">This is The Book Corner, where a group of friendly neighbors share their love of reading by
-         lending each other books!</h3>
-      <br>
-      <br>
-      <img src="../../../assets/img/lib_flowers.jpg" alt="books" class="responsive-image">
-   </div>
-   <div class="grid-item">
-      <br>
-      <p class="p-text">We do not take money, as we do not wish to. We do this as a way to get to know our neighbors
-         better
-         and build a
-         stronger community. The bonus is meeting likeminded people and enjoying new worlds to explore, without thinking
-         about where to put some more shelves, he-he.
-      </p>
-      <p class="p-text">You are free to explore our <a [routerLink]="['/catalog']">Book Catalog</a> and take a look
-         around. If you wish to join us,
-         go and quickly <a [routerLink]="['/users/register']">Register</a>. Or, in case you are already one of us, welcome
-         back and <a [routerLink]="['/users/login']">Login</a> ahead.
-      </p>
-      <p class="p-text">By registering or logging in you will be able to share the full experience, for example to tell
-         us which books from your home library you are
-         willing to lend to someone or pick a book or two yourself. Per mutual agreement, the books
-         are lent for a 3-month period, but
-         depending on their length, you could contact the Book Owner via e-mail to extend that deadline. We
-         try to be polite, with dignity and honor and keep building the trust in The Book Corner initiative.</p>
-
-   </div>
-   <div class="grid-item">
-      <br>
-      <p class="p-text">In case you have questions about this App and who made it, feel free to take a look at the
-         <a [routerLink]="['/about']">About page</a>, where you will find the information of the App creator.
-      </p>
-      <p class="p-text">In case you need technical support, the <a [routerLink]="['/about']">About page</a> is also the
-         place to find contacts to report issues, ask questions or just share some feedback.
-      </p>
-      <p class="p-text">Below you can find the latest 5 additions to our library. We hope to pique your interest and for
-         you to become
-         a part of the community.</p>
-      <br>
-      <h3 class="h3-title">Enjoy! </h3>
-      <p class="p-text"><strong>P.S.:</strong> Keep in
-         mind, we do have a pet dragon to deal evildoers of any kind...</p>
-   </div>
-   <div class="grid-item">
-      <br>
-      <br>
-      <img src="../../../assets/img/dragon.jpg" alt="dragon" class="responsive-image">
-   </div>
+  <div class="grid-item">
+    <br />
+    <h1 class="h1-title">Welcome, book lover!</h1>
+    <br />
+    <h3 class="h3-title">
+      The Book Corner is a cozy nook where neighbors bond over their shared
+      passion for reading and lend books to each other!
+    </h3>
+    <br />
+    <img
+      src="../../../assets/img/lib_flowers.jpg"
+      alt="books"
+      class="responsive-image"
+    />
+  </div>
+  <div class="grid-item">
+    <br />
+    <br />
+    <br />
+    <p class="p-text">
+      We're not in it for the money, but for the joy of building a stronger,
+      more connected community. The cherry on top? Discovering new realms
+      through the pages of a book, without worrying about finding space for
+      another bookshelf.
+    </p>
+    <p class="p-text">
+      Feel free to peruse our <a [routerLink]="['/catalog']">Book Catalog</a>.
+      If you'd like to join our reading circle, simply
+      <a [routerLink]="['/users/register']">Register</a>. If you're already a
+      member, welcome back! Please
+      <a [routerLink]="['/users/login']">Login</a> to continue.
+    </p>
+    <p class="p-text">
+      By registering or logging in, you can fully participate in our book
+      exchange, lending books from your personal library or borrowing a couple
+      for yourself. Books are typically lent for a 3-month period, but this can
+      be extended upon request and agreement with the user who owns the book. We
+      strive to foster a respectful and trustworthy environment here at The Book
+      Corner.
+    </p>
+  </div>
+  <div class="grid-item">
+    <br />
+    <br />
+    <br />
+    <p class="p-text">
+      If you're curious about this App and its creator, check out the
+      <a [routerLink]="['/about']">About page</a>.
+    </p>
+    <p class="p-text">
+      For technical support, or to report issues, ask questions, or share
+      feedback, please visit the <a [routerLink]="['/about']">About page</a>.
+    </p>
+    <p class="p-text">
+      Below, you'll find the five latest additions to our library. We hope they
+      spark your interest and inspire you to become a part of our community.
+    </p>
+    <h3 class="h3-title">Happy reading!</h3>
+    <p class="p-text">
+      <strong>P.S.:</strong> Just a heads up, we have a pet dragon on standby to
+      handle any mischief...
+    </p>
+  </div>
+  <div class="grid-item">
+    <br />
+    <img
+      src="../../../assets/img/dragon.jpg"
+      alt="dragon"
+      class="responsive-image"
+    />
+  </div>
 </div>
 <div>
-   <p class="h1-second-title" position="center">Latest in The Book Corner</p>
-   <div *ngIf="this.hasResults">
-      <mat-grid-list cols="5" rowHeight="1:1">
-         <mat-grid-tile *ngFor="let book of books">
-            <mat-card class="card-more-margin">
-               <mat-card-header>
-                  <mat-card-title-group>
-                     <mat-card-title>{{book.title}}</mat-card-title>
-                     <mat-card-subtitle>by {{book.author}}</mat-card-subtitle>
-                     <mat-card-subtitle>
-                        <div class="stars">
-                           <div>Rating: </div>
-                           <div *ngFor="let star of (book.averageRating ? getStars(book.averageRating).full : [])">
-                              <mat-icon>star</mat-icon>
-                           </div>
-                           <div *ngFor="let star of (book.averageRating ? getStars(book.averageRating).half : [])">
-                              <mat-icon>star_half</mat-icon>
-                           </div>
-                           <div *ngFor="let star of (book.averageRating ? getStars(book.averageRating).empty : [])">
-                              <mat-icon>star_border</mat-icon>
-                           </div>
-                        </div>
-                     </mat-card-subtitle>
-                     <img mat-card-md-image src="{{book.coverUrl}}" alt="book cover">
-                  </mat-card-title-group>
-               </mat-card-header>
-               <mat-card-content>
-                  <div class="label"><strong>Book Owner:</strong></div>
-                  <a [routerLink]="['/users/profile', book.owner._id]">
-                     <p>{{book.owner.username}}</p>
-                  </a>
-                  <br>
-               </mat-card-content>
-               <mat-card-content>
-                  <div class="label"><strong>Description / Resume by the Book Owner:</strong></div>
-                  <p style="max-width: 550px;">{{book.description.substring(0, 75)}}...</p>
-               </mat-card-content>
-               <mat-card-actions>
-                  <button mat-raised-button color="primary"
-                     [routerLink]="['/catalog', book._id]"><mat-icon>chevron_right</mat-icon>Details</button>
-               </mat-card-actions>
-            </mat-card>
-         </mat-grid-tile>
-      </mat-grid-list>
-   </div>
+   <br />
+  <p class="h1-second-title" position="center">Latest in The Book Corner</p>
+  <div *ngIf="this.hasResults">
+    <mat-grid-list cols="5" rowHeight="1:1">
+      <mat-grid-tile *ngFor="let book of books">
+        <mat-card class="card-more-margin">
+          <mat-card-header>
+            <mat-card-title-group>
+              <mat-card-title>{{ book.title }}</mat-card-title>
+              <mat-card-subtitle>by {{ book.author }}</mat-card-subtitle>
+              <mat-card-subtitle>
+                <div class="stars">
+                  <div>Rating:</div>
+                  <div
+                    *ngFor="
+                      let star of book.averageRating
+                        ? getStars(book.averageRating).full
+                        : []
+                    "
+                  >
+                    <mat-icon>star</mat-icon>
+                  </div>
+                  <div
+                    *ngFor="
+                      let star of book.averageRating
+                        ? getStars(book.averageRating).half
+                        : []
+                    "
+                  >
+                    <mat-icon>star_half</mat-icon>
+                  </div>
+                  <div
+                    *ngFor="
+                      let star of book.averageRating
+                        ? getStars(book.averageRating).empty
+                        : []
+                    "
+                  >
+                    <mat-icon>star_border</mat-icon>
+                  </div>
+                </div>
+              </mat-card-subtitle>
+              <img
+                mat-card-md-image
+                src="{{ book.coverUrl }}"
+                alt="book cover"
+              />
+            </mat-card-title-group>
+          </mat-card-header>
+          <mat-card-content>
+            <div class="label"><strong>Book Owner:</strong></div>
+            <a [routerLink]="['/users/profile', book.owner._id]">
+              <p>{{ book.owner.username }}</p>
+            </a>
+            <br />
+          </mat-card-content>
+          <mat-card-content>
+            <div class="label">
+              <strong>Description / Resume by the Book Owner:</strong>
+            </div>
+            <p style="max-width: 550px">
+              {{ book.description.substring(0, 75) }}...
+            </p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button
+              mat-raised-button
+              color="primary"
+              [routerLink]="['/catalog', book._id]"
+            >
+              <mat-icon>chevron_right</mat-icon>Details
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
 
-   <div *ngIf="!this.hasResults">
-      <mat-card class="home-mat-card">
-         <mat-card-header>
-            <mat-card-title>
-               <h2 class="title">No Books to show at this time</h2>
-            </mat-card-title>
-         </mat-card-header>
-      </mat-card>
-   </div>
+  <div *ngIf="!this.hasResults">
+    <mat-card class="home-mat-card">
+      <mat-card-header>
+        <mat-card-title>
+          <h2 class="title">No Books to show at this time</h2>
+        </mat-card-title>
+      </mat-card-header>
+    </mat-card>
+  </div>
 </div>
