--- a/client/src/app/books/view-book/view-book.component.html
+++ b/client/src/app/books/view-book/view-book.component.html
@@ -2,9 +2,10 @@
   <mat-spinner></mat-spinner>
 </div>
 <div class="top-div" *ngIf="!isLoading">
-   <button mat-raised-button (click)="goBack()"><mat-icon>arrow_back</mat-icon>Back</button>
+  <button mat-raised-button (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>Back
+  </button>
   <mat-card>
-   
     <mat-card-header>
       <mat-card-title-group>
         <mat-card-title>
@@ -146,4 +147,8 @@
   </mat-card>
 </div>
 
-<app-all-comments *ngIf="showComments && loggedIn === true" [bookId]="bookId" [hasRatedBook]="hasRatedBook"></app-all-comments>
+<app-all-comments
+  *ngIf="showComments && loggedIn === true"
+  [bookId]="bookId"
+  [hasRatedBook]="hasRatedBook"
+></app-all-comments>
