--- a/client/src/app/books/view-book/view-book.component.scss
+++ b/client/src/app/books/view-book/view-book.component.scss
@@ -1,14 +1,14 @@
-@import './../books.module.scss';
+@import "./../books.module.scss";
 
-.label{
-   font-weight: bold;
+.label {
+  font-weight: bold;
 }
 
 .sub-title {
-   font-size: medium;
-   margin: 10px;
+  font-size: medium;
+  margin: 10px;
 }
 
 .mat-raised-button {
-   margin: 20px;
+  margin: 20px;
 }
