--- a/client/src/app/comments/add-comment/add-comment.component.scss
+++ b/client/src/app/comments/add-comment/add-comment.component.scss
@@ -1,26 +1,26 @@
-.mat-dialog-content-comment{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 65vh;
-   width: 50vh;
+.mat-dialog-content-comment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 65vh;
+  width: 50vh;
 }
 
-.form-header{
-   align-items: center;
-   justify-content: flex-start;
-   color:black;
+.form-header {
+  align-items: center;
+  justify-content: flex-start;
+  color: black;
 }
 
 .mat-form-comment {
-   width: 43vh;
+  width: 43vh;
 }
 
-.field-label{
-   color:black;
+.field-label {
+  color: black;
 }
 
-.submit-comment-btn{
-   text-align: right;
-   margin: 15px
+.submit-comment-btn {
+  text-align: right;
+  margin: 15px;
 }
