--- a/client/src/app/main/home/home.component.scss
+++ b/client/src/app/main/home/home.component.scss
@@ -1,20 +1,20 @@
-@import './../main.module.scss';
+@import "./../main.module.scss";
 
-.card-more-margin{
-   margin: 5px
+.card-more-margin {
+  margin: 5px;
 }
 
 .stars {
-   display: flex;
-   align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .title {
-   font-size: xx-large;
+  font-size: xx-large;
 }
 
 .home-mat-card {
-   margin: 75px;
-   display: flex;
-   align-items: center;
+  margin: 75px;
+  display: flex;
+  align-items: center;
 }
