--- a/client/src/app/shared/navigation/navigation.component.scss
+++ b/client/src/app/shared/navigation/navigation.component.scss
@@ -1,8 +1,8 @@
 .mat-raised-button {
-   margin-right: 10px;
-   margin: 10px;
- }
+  margin-right: 10px;
+  margin: 10px;
+}
 
 .mat-toolbar {
-   background-color: #673AB7;
+  background-color: #673ab7;
 }
