--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,29 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 html {
-   height: 100%;
-   position: relative;
-   min-height: 100%;
+  height: 100%;
+  position: relative;
+  min-height: 100%;
 }
 
 body {
-   height: 100%;
-   margin: 0;
-   font-family: Roboto, "Helvetica Neue", sans-serif;
-   display: flex;
-   flex-direction: column;
-   min-height: 100vh;
+  height: 100%;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 footer {
-   margin-top: auto;
-   height: 80px;
+  margin-top: auto;
+  height: 80px;
 }
 
 @media (max-width: 480px) {
-   footer {
-      display: none;
-      visibility: hidden;
-   }
+  footer {
+    display: none;
+    visibility: hidden;
+  }
 }
