--- a/client/src/app/books/edit-book/edit-book.component.html
+++ b/client/src/app/books/edit-book/edit-book.component.html
@@ -2,7 +2,9 @@
   <mat-spinner></mat-spinner>
 </div>
 <div class="top-div" *ngIf="!isLoading && book">
-  <button mat-raised-button (click)="goBack()"><mat-icon>arrow_back</mat-icon>Back</button>
+  <button mat-raised-button (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>Back
+  </button>
   <mat-card>
     <mat-card-header>
       <mat-card-title-group>
