--- a/client/src/app/comments/all-comments/all-comments.component.html
+++ b/client/src/app/comments/all-comments/all-comments.component.html
@@ -45,7 +45,10 @@
             mat-icon-button
             color="basic"
             (click)="comment._id && voteHelpful(comment._id)"
-            [disabled]="comment.user._id == this.currentUserId || isUserVotedHelpful(comment)"
+            [disabled]="
+              comment.user._id == this.currentUserId ||
+              isUserVotedHelpful(comment)
+            "
           >
             <mat-icon>thumb_up</mat-icon>
           </button>
@@ -54,7 +57,10 @@
             mat-icon-button
             color="basic"
             (click)="comment._id && voteNotHelpful(comment._id)"
-            [disabled]="comment.user._id == this.currentUserId || isUserVotedHelpful(comment)"
+            [disabled]="
+              comment.user._id == this.currentUserId ||
+              isUserVotedHelpful(comment)
+            "
           >
             <mat-icon>thumb_down</mat-icon>
           </button>
