--- a/client/src/app/shared/footer/footer.component.scss
+++ b/client/src/app/shared/footer/footer.component.scss
@@ -1,11 +1,11 @@
 .mat-toolbar {
-   background-color: #673AB7;
+  background-color: #673ab7;
 }
 
 .footer-text {
-   font-size: 13px;
-   font-weight: bold;
-   color: white;
-   width: 100%;
-   text-align: center;
+  font-size: 13px;
+  font-weight: bold;
+  color: white;
+  width: 100%;
+  text-align: center;
 }
