--- a/client/src/app/shared/navigation/navigation.component.html
+++ b/client/src/app/shared/navigation/navigation.component.html
@@ -1,30 +1,93 @@
-<div class="mat-toolbar" color="#673AB7" fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="10px"
-   fxLayoutAlign="center center">
-   <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/']">
-      <mat-icon>home</mat-icon>Home</button>
-   <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/catalog']" [queryParams]="{ page: 0 }">
-      <mat-icon>collections_bookmark</mat-icon>Book Catalog</button>
-   <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/search']">
-      <mat-icon>search</mat-icon>Search</button>
+<div
+  class="mat-toolbar"
+  color="#673AB7"
+  fxLayout="row"
+  fxLayout.lt-sm="column"
+  fxLayoutGap="10px"
+  fxLayoutAlign="center center"
+>
+  <button
+    mat-raised-button
+    class="mat-raised-button"
+    fxFlex="50%"
+    fxFlex.lt-sm="100%"
+    [routerLink]="['/']"
+  >
+    <mat-icon>home</mat-icon>Home
+  </button>
+  <button
+    mat-raised-button
+    class="mat-raised-button"
+    fxFlex="50%"
+    fxFlex.lt-sm="100%"
+    [routerLink]="['/catalog']"
+    [queryParams]="{ page: 0 }"
+  >
+    <mat-icon>collections_bookmark</mat-icon>Book Catalog
+  </button>
+  <button
+    mat-raised-button
+    class="mat-raised-button"
+    fxFlex="50%"
+    fxFlex.lt-sm="100%"
+    [routerLink]="['/search']"
+  >
+    <mat-icon>search</mat-icon>Search
+  </button>
 
-   <ng-container *ngIf="!loggedIn">
-      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent"
-         [routerLink]="['/users/login']">
-         <mat-icon>transit_enterexit</mat-icon>Login</button>
-      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent"
-         [routerLink]="['/users/register']">
-         <mat-icon>account_circle</mat-icon>Register</button>
-   </ng-container>
+  <ng-container *ngIf="!loggedIn">
+    <button
+      mat-raised-button
+      class="mat-raised-button"
+      fxFlex="50%"
+      fxFlex.lt-sm="100%"
+      color="accent"
+      [routerLink]="['/users/login']"
+    >
+      <mat-icon>transit_enterexit</mat-icon>Login
+    </button>
+    <button
+      mat-raised-button
+      class="mat-raised-button"
+      fxFlex="50%"
+      fxFlex.lt-sm="100%"
+      color="accent"
+      [routerLink]="['/users/register']"
+    >
+      <mat-icon>account_circle</mat-icon>Register
+    </button>
+  </ng-container>
 
-   <ng-container *ngIf="loggedIn">
-      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent"
-      [routerLink]="['/users/logout']">
-         <mat-icon>exit_to_app</mat-icon>Logout</button>
-      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent"
-         [routerLink]="['/users/profile']">
-         <mat-icon>whatshot</mat-icon>Hi, {{currentUser}}! (Profile)</button>
-   </ng-container>
+  <ng-container *ngIf="loggedIn">
+    <button
+      mat-raised-button
+      class="mat-raised-button"
+      fxFlex="50%"
+      fxFlex.lt-sm="100%"
+      color="accent"
+      [routerLink]="['/users/logout']"
+    >
+      <mat-icon>exit_to_app</mat-icon>Logout
+    </button>
+    <button
+      mat-raised-button
+      class="mat-raised-button"
+      fxFlex="50%"
+      fxFlex.lt-sm="100%"
+      color="accent"
+      [routerLink]="['/users/profile']"
+    >
+      <mat-icon>whatshot</mat-icon>Hi, {{ currentUser }}! (Profile)
+    </button>
+  </ng-container>
 
-   <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/about']">
-      <mat-icon>spa</mat-icon>About the App</button>
+  <button
+    mat-raised-button
+    class="mat-raised-button"
+    fxFlex="50%"
+    fxFlex.lt-sm="100%"
+    [routerLink]="['/about']"
+  >
+    <mat-icon>spa</mat-icon>About the App
+  </button>
 </div>
