--- a/client/src/app/users/login/login.component.html
+++ b/client/src/app/users/login/login.component.html
@@ -2,7 +2,9 @@
   <mat-spinner></mat-spinner>
 </div>
 <div class="top-div" *ngIf="!isLoading">
-  <button mat-raised-button (click)="goBack()"><mat-icon>arrow_back</mat-icon>Back</button>
+  <button mat-raised-button (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>Back
+  </button>
   <mat-card>
     <mat-card-header>
       <mat-card-title-group>
@@ -52,14 +54,13 @@
             />
 
             <button
-            type="button"
+              type="button"
               mat-icon-button
               matSuffix
               (click)="hide = !hide"
               [attr.aria-label]="'Hide password'"
               [attr.aria-pressed]="hide"
             >
-            
               <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
             </button>
             <mat-error *ngIf="passwordField.errors?.['required']"
