--- a/client/src/app/users/profile/profile.component.html
+++ b/client/src/app/users/profile/profile.component.html
@@ -3,7 +3,9 @@
 </div>
 <div class="top-div" *ngIf="!isLoading">
   <ng-container *ngIf="!showEditMode">
-    <button mat-raised-button (click)="goBack()"><mat-icon>arrow_back</mat-icon>Back</button>
+    <button mat-raised-button (click)="goBack()">
+      <mat-icon>arrow_back</mat-icon>Back
+    </button>
     <mat-card>
       <mat-card-header>
         <mat-card-title-group>
@@ -80,7 +82,9 @@
   </ng-container>
 
   <ng-container *ngIf="showEditMode">
-    <button mat-raised-button (click)="goBack()"><mat-icon>arrow_back</mat-icon>Back</button>
+    <button mat-raised-button (click)="goBack()">
+      <mat-icon>arrow_back</mat-icon>Back
+    </button>
     <mat-card>
       <mat-card-header>
         <mat-card-title-group>
@@ -166,8 +170,10 @@
                 *ngIf="editUserForm.get('email')?.errors?.['minlength']"
                 >E-mail must be at least 10 characters long.</mat-error
               >
-              <mat-error *ngIf="editUserForm.get('email')?.errors?.['maxlength']">E-mail must be no more than
-               50 characters long.</mat-error>
+              <mat-error
+                *ngIf="editUserForm.get('email')?.errors?.['maxlength']"
+                >E-mail must be no more than 50 characters long.</mat-error
+              >
               <mat-error
                 *ngIf="editUserForm.get('email')?.errors?.['emailValid']"
                 >Invalid email address.</mat-error
