--- a/client/src/app/users/profile/profile.component.scss
+++ b/client/src/app/users/profile/profile.component.scss
@@ -1,23 +1,23 @@
-@import './../users.module.scss';
+@import "./../users.module.scss";
 
-.label{
-   font-weight: bold;
+.label {
+  font-weight: bold;
 }
 
 .sub-title {
-   font-size: medium;
-   margin: 10px;
+  font-size: medium;
+  margin: 10px;
 }
 
 .mat-raised-button {
-   margin: 20px;
+  margin: 20px;
 }
 
 .mat-form-field2 {
-   width: 650px;
+  width: 650px;
 }
 
-.table-profile-books{
-   width: 100%;
-   border-spacing: 15px;
+.table-profile-books {
+  width: 100%;
+  border-spacing: 15px;
 }
